Optimize requirements for Render with specific versions
Updated requirements for a lighter build optimized for Render, specifying versions for core libraries and removing unnecessary dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,42 @@
-gradio
-flask
-python-dotenv
-pypdf
-langchain
-langchain-community
-langchain-text-splitters
-langchain-groq
-langchain-huggingface
-faiss-cpu
-sentence-transformers
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-requests
-gunicorn
-torch
-transformers
-numpy
+# requirements-light.txt - Optimized for Render (CPU only)
+# Reduces build time and disk usage
+
+# Core web frameworks
+gradio==4.44.0
+flask==3.0.0
+gunicorn==21.2.0
+
+# Environment & utilities
+python-dotenv==1.0.0
+requests==2.31.0
+
+# PDF processing
+pypdf==3.17.4
+
+# LangChain (essential only)
+langchain==0.1.0
+langchain-community==0.0.13
+langchain-text-splitters==0.0.1
+langchain-groq==0.0.1
+langchain-huggingface==0.0.1
+
+# Vector database
+faiss-cpu==1.7.4
+
+# Embeddings (lighter version)
+sentence-transformers==2.3.1
+
+# Google OAuth
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+
+# ML/AI (CPU-optimized)
+numpy==1.24.3  # Older, lighter version
+transformers==4.36.2
+
+# PyTorch CPU-only (much smaller!)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.2+cpu
+
+# Note: This will be ~1GB instead of ~3GB
