--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,34 @@
-# requirements.txt - Fixed dependencies for Render
-gradio==4.44.0
-flask==3.0.0
-python-dotenv==1.0.0
-pypdf==3.17.4
+# requirements.txt - No version constraints for maximum compatibility
 
-# LangChain - compatible versions
-langchain==0.1.0
-langchain-community==0.0.13
-langchain-text-splitters==0.0.1
-langchain-groq==0.0.1
-langchain-huggingface==0.0.1
+# Core web frameworks
+gradio
+flask
+gunicorn
+
+# Environment & utilities
+python-dotenv
+requests
+
+# PDF processing
+pypdf
+
+# LangChain ecosystem
+langchain
+langchain-community
+langchain-text-splitters
+langchain-groq
+langchain-huggingface
 
 # Vector database
-faiss-cpu==1.7.4
+faiss-cpu
 
-# Embeddings - UPDATED to match langchain-huggingface requirement
-sentence-transformers>=2.6.0
+# Embeddings and ML
+sentence-transformers
+transformers
+torch
+numpy
 
 # Google OAuth
-google-auth==2.25.2
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-
-# Core dependencies
-requests==2.31.0
-numpy==1.26.3
-transformers==4.36.2
-
-# PyTorch CPU-only (lighter for Render)
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.1.2+cpu
-
-# WSGI server for production
-gunicorn==21.2.0
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
